<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/tvTitulo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/tvLogin"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/btIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btIngresar"
        android:onClick="login"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/et_Pass"
        android:layout_alignStart="@+id/et_Pass" />

    <Button
        android:text="@string/btCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btCancelar"
        android:layout_alignBaseline="@+id/btIngresar"
        android:layout_alignBottom="@+id/btIngresar"
        android:layout_alignEnd="@+id/et_Pass" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitulo_login"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="17dp"
        android:hint="@string/tvUsername"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_Pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etUsuario"
        android:layout_below="@+id/etUsuario"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:hint="@string/tvPassword"
        android:inputType="textPassword" />

</RelativeLayout>