<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.andre.reposteriayoli.cliente_orden">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:text="@string/tvTitulo2" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvTitulo"
            android:layout_marginStart="32dp"
            android:layout_marginTop="17dp"
            android:text="@string/tvTitulo2" />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tvNombre"
            android:layout_below="@+id/tvNombre"
            android:layout_marginTop="13dp"
            android:text="@string/tvDescripcion" />

        <TextView
            android:id="@+id/tvPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tvDescripcion"
            android:layout_below="@+id/tvDescripcion"
            android:layout_marginTop="15dp"
            android:text="@string/tvPrecio" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_alignBaseline="@+id/tvNombre"
            android:layout_alignBottom="@+id/tvNombre"
            android:layout_alignEnd="@+id/tvTitulo" />

        <TextView
            android:id="@+id/tvDet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tvInfo"
            android:layout_alignTop="@+id/tvDescripcion"
            android:text="TextView" />

        <TextView
            android:id="@+id/tvPre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tvDet"
            android:layout_alignTop="@+id/tvPrecio"
            android:text="TextView" />

        <TextView
            android:id="@+id/tvAviso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/tvAviso"
            android:layout_below="@+id/textView13"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tvPrecio"
            android:layout_below="@+id/tvAviso"
            android:layout_marginTop="28dp"
            android:text="@string/tvUsuaario" />

        <TextView
            android:id="@+id/tvTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTel2"
            android:layout_below="@+id/etNombre"
            android:layout_alignStart="@+id/tvUsuario"
            android:layout_marginTop="43dp" />

        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tvTel"
            android:layout_below="@+id/tvTel"
            android:layout_marginTop="59dp"
            android:text="@string/tvCorreo" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvUsuario"
            android:layout_alignBottom="@+id/tvUsuario"
            android:layout_alignStart="@+id/tvTitulo"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_alignBaseline="@+id/tvTel"
            android:layout_alignBottom="@+id/tvTel"
            android:layout_alignStart="@+id/etNombre" />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_alignBaseline="@+id/tvCorreo"
            android:layout_alignBottom="@+id/tvCorreo"
            android:layout_alignStart="@+id/etTel" />

        <Button
            android:id="@+id/btPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etCorreo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/btPedido"
            android:textColor="@color/cardview_light_background" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPrecio"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:text="--------------------------------------------------------------------------------" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
